--- a/frontend/vintage-tracker/package.json
+++ b/frontend/vintage-tracker/package.json
@@ -13,7 +13,10 @@
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.66.9",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "next": "15.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -22,7 +25,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/express": "^5.0.0",
+    "@types/node": "^20.17.19",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
