--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,9 @@
     "typescript-eslint": "^8.25.0"
   },
   "dependencies": {
+    "axios": "^1.8.1",
+    "cheerio": "^1.0.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2"
   }
 }
