create root tsconfig, update frontend and backend config to implement shared types package

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.8.1",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "@vintdex/types": "workspace:*"
   }
 }
