--- a/frontend/vintage-tracker/tsconfig.json
+++ b/frontend/vintage-tracker/tsconfig.json
@@ -19,9 +19,13 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@vintdex/types": ["../types/src"]
     }
   },
+  "references": [
+    { "path": "../types" }
+  ],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
