Some typing fixes in scraper.ts

--- a/frontend/vintage-tracker/tsconfig.json
+++ b/frontend/vintage-tracker/tsconfig.json
@@ -24,7 +24,7 @@
     }
   },
   "references": [
-    { "path": "../types" }
+    { "path": "../../types" }
   ],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
