--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "concurrently": "^8.2.2",
     "typescript": "^5.0.0"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/cheerio": "^0.22.35",
+    "axios": "^1.8.1",
+    "cheerio": "^1.0.0"
+  }
 }
