--- a/backend/package.json
+++ b/backend/package.json
@@ -20,11 +20,13 @@
     "@typescript-eslint/parser": "^8.25.0",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
+    "supabase": "^2.15.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.25.0"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.1",
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow-models/mobilenet": "^2.1.1",
     "@tensorflow/tfjs-node": "^4.22.0",
