--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.1",
     "@types/cheerio": "^0.22.35",
     "axios": "^1.8.1",
     "cheerio": "^1.0.0"
