erm... made some updates to front end search functionality

--- a/frontend/vintage-tracker/tsconfig.json
+++ b/frontend/vintage-tracker/tsconfig.json
@@ -20,7 +20,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@vintdex/types": ["../types/src"]
+      "@vintdex/types": ["../../types/src"]
     }
   },
   "references": [
