--- a/frontend/vintage-tracker/package.json
+++ b/frontend/vintage-tracker/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
     "@tanstack/react-query": "^5.66.9",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
